tests/unit/data/ec2/eu-west-1/123456789012/describe_security_groups.json
[
    {
        "IpPermissionsEgress": [
            {
                "IpProtocol": "-1", 
                "IpRanges": [
                    {
                        "CidrIp": "0.0.0.0/0"
                    }
                ], 
                "UserIdGroupPairs": [], 
                "PrefixListIds": []
            }
        ], 
        "Description": "default VPC security group", 
        "IpPermissions": [
            {
                "IpProtocol": "-1", 
                "IpRanges": [], 
                "UserIdGroupPairs": [
                    {
                        "UserId": "123456789012", 
                        "GroupId": "sg-57c69932"
                    }
                ], 
                "PrefixListIds": []
            }
        ], 
        "GroupName": "default", 
        "VpcId": "vpc-b7d662d2", 
        "OwnerId": "123456789012", 
        "GroupId": "sg-57c69932"
    }
]
